fixed word-wrap txn and address page

--- a/pages/accountblock/accountblock.module.scss
+++ b/pages/accountblock/accountblock.module.scss
@@ -161,6 +161,10 @@
     font-weight: 600;
 }
 
+.breakAll {
+    word-break: break-all;
+}
+
 .imageFilterToBlack {
     filter: invert(0%) sepia(44%) saturate(24%) hue-rotate(317deg) brightness(77%) contrast(73%);
 }
